# SFMLGame

./: CMakeLists.txt  README.md
assets/shaders/: fragmentShader.fs  vertexShader.vs  vertexShader2.vs
src/: Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Manager.cpp  RenderEngine.cpp  RenderEngine.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/Components/: Component.cpp  Component.hpp  Components.hpp  FPSCounter.cpp  FPSCounter.hpp  Position.cpp  Position.hpp  Renderer.cpp  Renderer.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp
src/Rendering/: Camera.cpp  Camera.hpp  Renderer.cpp  Shader.cpp  Shader.hpp
